个人中心/基本信息界面

--- a/src/assets/css/gloab.css
+++ b/src/assets/css/gloab.css
@@ -69,9 +69,39 @@ input {
 .primary-color {
   color: #409eff;
 }
+/* =============================按钮 */
+.primary-btn {
+  padding: 12px 20px;
+  color: #fff;
+  cursor: pointer;
+  background-color: #2970c1;
+}
+.border-btn {
+  padding: 12px 20px;
+  cursor: pointer;
+  background: #fff;
+  border: 1px solid #dcdfe6;
+  color: #606266;
+  -webkit-appearance: none;
+  text-align: center;
+  box-sizing: border-box;
+  outline: none;
+  margin: 0;
+  transition: 0.1s;
+  font-weight: 500;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  padding: 12px 20px;
+  font-size: 14px;
+  border-radius: 4px;
+}
 /* =================================背景颜色 */
 .gray-bgc {
   /* background-color: #f4f5f6; */
+}
+.bgc-blue {
+  background-color: #409eff;
 }
 /* ================================公共字体 */
 .font11 {
