--- a/src/assets/css/gloab.css
+++ b/src/assets/css/gloab.css
@@ -187,6 +187,9 @@ input {
 .text-right {
   text-align: right;
 }
+.text-center {
+  text-align: center;
+}
 /* ===================================间距 */
 .m-l-10 {
   margin-left: 10px;
