--- a/src/assets/css/confirmOrder.css
+++ b/src/assets/css/confirmOrder.css
@@ -8,13 +8,17 @@
   line-height: 50px;
 }
 .confirm-content {
-  width: 100%;
+  /* width: 100%; */
   border: 1px solid #e5e5e5;
-  padding: 10px 20px 20px 20px;
+  padding: 10px 20px 10px 20px;
 }
 .confirm-title {
   border-bottom: 1px solid #bcbcbc;
   padding-bottom: 5px;
+}
+/* ==============================地址 */
+.address-content {
+  width: 100%;
 }
 .add-address-box {
   width: 326px;
@@ -28,5 +32,87 @@
   margin: 0 auto;
   margin-top: 30px;
 }
+.address-list-box {
+  padding: 16px;
+  /* padding-bottom: 6px; */
+}
 .add-item-box {
+  width: 100%;
+  height: 34px;
+  line-height: 34px;
+  margin-bottom: 10px;
+  /* background-color: darkcyan; */
+}
+.lable-box {
+  height: 32px;
+  /* background-color: salmon; */
+  width: 110px;
+  text-align: center;
+  margin-right: 20px;
+  border: 1px solid #ff8400;
+}
+.address-text {
+  width: 230px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.add-left {
+  width: 70%;
+  /* background-color: salmon; */
+}
+.add-right {
+  width: 30%;
+}
+/* .order-box{
+    width: 100%;
+    border-top: ;
+} */
+.cart-list {
+  /* min-height: 116px; */
+  padding: 30px 0;
+  background: #fcfcfc;
+  border: 1px solid #f2f2f2;
+  /* border-top: none; */
+}
+.headline1 {
+  width: 15%;
+  /* background-color: cadetblue; */
+}
+.headline2 {
+  width: 45%;
+}
+.headline3 {
+  width: 40%;
+  height: 100%;
+  padding-right: 10px;
+  /* background-color: salmon; */
+}
+.cart-goods-img {
+  width: 80px;
+  height: 80px;
+  text-align: center;
+  vertical-align: middle;
+  display: table-cell;
+}
+.cart-goods-img img {
+  width: 60px;
+  height: 80px;
+}
+.goods-name {
+  width: 45%;
+}
+.goods-info {
+  width: 50%;
+}
+.justify {
+  display: inline-block;
+  width: 60px;
+  text-align: right;
+}
+.handle-order {
+  width: 180px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
 }
