--- a/src/assets/css/confirmOrder.css
+++ b/src/assets/css/confirmOrder.css
@@ -129,3 +129,47 @@
   line-height: 40px;
   background-color: #ff8400;
 }
+.pay-box {
+  width: 60px;
+  height: 60px;
+}
+.pay-box-card {
+  width: 80px;
+  height: 60px;
+}
+
+/* =================银行卡列表 */
+.card-item-box {
+  width: 100%;
+  height: 120px;
+  border: 1px solid #e5e5e5;
+  margin-top: 20px;
+}
+.type-img-box {
+  width: 200px;
+  height: 100%;
+  /* line-height: 120px; */
+  text-align: center;
+  background-color: #edffff;
+}
+.type-img {
+  width: 54px;
+  height: 50px;
+  margin-top: 35px;
+}
+.card-info {
+  width: calc(100% - 300px);
+  height: 100%;
+  text-align: center;
+  /* background-color: darkgoldenrod; */
+}
+.card-name-box {
+  width: 120px;
+  text-align: right;
+  margin-bottom: 10px;
+}
+.handle-box {
+  width: 150px;
+  height: 100%;
+  /* background-color: salmon; */
+}
