--- a/src/assets/css/gloab.css
+++ b/src/assets/css/gloab.css
@@ -121,7 +121,7 @@ input {
 .bgc-blue {
   background-color: #409eff;
 }
-/* ================================公共字体 */
+/* ================================字体大小 */
 .font11 {
   font-size: 11px;
 }
