--- a/src/assets/css/confirmOrder.css
+++ b/src/assets/css/confirmOrder.css
@@ -1,3 +1,6 @@
+body {
+  /* background-color: #ffffff; */
+}
 .confirm-box {
   width: 980px;
   margin: 0 auto;
@@ -134,7 +137,7 @@
   height: 60px;
 }
 .pay-box-card {
-  width: 80px;
+  width: 70px;
   height: 60px;
 }
 
@@ -170,6 +173,8 @@
 }
 .handle-box {
   width: 150px;
-  height: 100%;
+  height: 120px;
+  /* height: 100%; */
+  line-height: 120px;
   /* background-color: salmon; */
 }
