--- a/src/assets/css/pay.css
+++ b/src/assets/css/pay.css
@@ -14,11 +14,11 @@ body {
     #409eff 100%
   );
 }
-.pay-box {
+.pay-box-page {
   width: 100%;
   height: 200px;
   line-height: 24px;
-  background-color: #fff;
+  background-color: #f5f5f5;
   padding: 10px;
 }
 .qr-box {
