--- a/src/assets/css/confirmOrder.css
+++ b/src/assets/css/confirmOrder.css
@@ -178,3 +178,28 @@ body {
   line-height: 120px;
   /* background-color: salmon; */
 }
+/* =======================================上传闲下支付凭证 */
+.avatar-uploader .el-upload {
+  border: 1px dashed #d9d9d9;
+  border-radius: 6px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+.avatar-uploader .el-upload:hover {
+  border-color: #409eff;
+}
+.avatar-uploader-icon {
+  font-size: 28px;
+  color: #8c939d;
+  width: 178px;
+  height: 178px;
+  line-height: 178px;
+  text-align: center;
+  border: 1px solid #e5e5e5;
+}
+.avatar {
+  width: 178px;
+  height: 178px;
+  display: block;
+}
