--- a/src/assets/css/pay.css
+++ b/src/assets/css/pay.css
@@ -38,6 +38,49 @@ body {
   height: 28px;
 }
 .price-box {
-  width: 300px;
-  height: 100%;
+  width: 200px;
+  height: 132px;
+  position: relative;
+}
+/* =======================================上传闲下支付凭证 */
+.avatar-uploader .el-upload {
+  border: 1px dashed #d9d9d9;
+  border-radius: 6px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+.avatar-uploader .el-upload:hover {
+  border-color: #409eff;
+}
+.avatar-uploader-icon {
+  font-size: 28px;
+  color: #8c939d;
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  border: 1px solid #e5e5e5;
+}
+.avatar {
+  width: 100px;
+  height: 100px;
+  display: block;
+}
+.order-pay-det {
+  width: 60%;
+}
+.remark-inp-order {
+  width: 200px;
+}
+.handle-voucher {
+  /* width: 100px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  border: 1px solid #2970c1;
+  border-radius: 4px; */
+  position: absolute;
+  right: 10px;
+  bottom: 0px;
 }
