--- a/src/assets/css/gloab.css
+++ b/src/assets/css/gloab.css
@@ -87,6 +87,9 @@ input {
 .f999 {
   color: #999;
 }
+.deep-blue {
+  color: #2168ba;
+}
 /* =============================按钮 */
 .primary-btn {
   padding: 12px 20px;
@@ -148,6 +151,9 @@ input {
 }
 .font20 {
   font-size: 20px;
+}
+.font22 {
+  font-size: 22px;
 }
 .font24 {
   font-size: 24px;
@@ -250,6 +256,9 @@ input {
 }
 .p-t-30 {
   padding-top: 30px;
+}
+.p-b-10 {
+  padding-bottom: 10px;
 }
 .p-b-80 {
   padding-bottom: 80px;
