--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -32,26 +32,32 @@
   /* padding-left: 40px; */
   /* background-color: darkolivegreen; */
 }
-.inp-box {
-  width: 317px;
-  height: 40px;
-  border: 1px solid #18ae66;
-  padding-left: 10px;
-}
-.btn-search {
-  width: 100px;
-  height: 42px;
-  line-height: 42px;
-  text-align: center;
-  background-color: #18ae66;
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
+
 /* =========================================广告位 */
 .bannar-center-box {
-  height: 340px;
+  /* height: 340px; */
   /* background-color: salmon; */
+  position: relative;
 }
+.news-ad-box {
+  width: 1200px;
+  height: 1000px;
+  position: absolute;
+  top: 0px;
+  right: 100px;
+  /* margin-left: 50%;
+  margin-right: 50%;
+  transform: translate(-50%); */
+
+  z-index: 999;
+}
+.news-and-ad {
+  width: 400px;
+  height: 960px;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.28);
+}
+
 .bannar-left-classify {
   width: 136px;
   height: 100%;
@@ -65,155 +71,45 @@
   text-align: left;
 }
 .bannar-box {
-  /* width: calc(100% - 156px); */
   width: 100%;
   height: 100%;
-  background-color: lightpink;
+  /* background-color: lightpink; */
 }
 .bannar-item {
-  width: 1200px;
-  height: 340px;
+  /* width: 1200px; */
+  /* height: 340px; */
 }
 .el-carousel__container {
-  height: 340px !important;
+  height: 1000px !important;
 }
-
-/* ==============================两大分类 */
-.two-class {
-  width: 49%;
-  height: 485px;
-  background-color: rgb(238, 219, 178);
-}
-.class-img {
-  width: 339px;
-  height: 485px;
-}
-.news-des {
-  width: calc(100% - 339px);
-  padding: 10px;
-}
-
-/* =============================商品分取模块 */
-.mode-goods {
+.news-ad-item {
   width: 100%;
-  height: 485px;
+  height: 48%;
+  line-height: 40px;
+  overflow: hidden;
+  /* background-color: lightcoral; */
 }
-.mode-head {
+.deliver-line {
   width: 100%;
-  padding: 15px 0px;
-}
-.mode-head-left {
-  width: 50%;
-  text-align: left;
-}
-.mode-head-right {
-  width: 50%;
-  text-align: right;
-}
-.mode-ad {
-  width: 232px;
-  height: 485px;
-}
-.mode-goods-list {
-  width: calc(100% - 247px);
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.mode-goods-item {
-  width: 24.3%;
-  height: 236px;
+  height: 2px;
   background-color: #fff;
 }
-.goods-img {
-  width: 150px;
-  height: 150px;
-  margin-top: 20px;
-  margin-left: 41px;
-  margin-bottom: 10px;
+.ellipsis-text {
+  width: 80%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
-
-/* ====================================第一版改版 */
-.title-box {
-  height: 40px;
-  line-height: 40px;
-  border-bottom: 1px solid #8e8e92;
-  /* background-color: bisque; */
+.hot-text-box {
+  width: 34px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
   margin-top: 10px;
+  background-color: #ff4b4b;
 }
-.content-goods {
+.home-goods-two {
   width: 100%;
-  background-color: #f6f6fa;
-}
-.good-item {
-  width: 1200px;
-  height: 485px;
-  margin: 0 auto;
-  background-color: #f6f6fa;
-  position: relative;
-}
-.class-img {
-  width: 60%;
-  margin: 0 auto;
-}
-.news-des0 {
-  position: absolute;
-  width: 400px;
-  padding: 10px;
-  background-color: rgba(153, 153, 153, 0.8);
-  border-radius: 10px;
-  left: 40px;
-}
-.news-des1 {
-  top: 20px;
-}
-.news-des2 {
-  /* width: 400px; */
-  top: 210px;
-  /* left: 20px; */
-}
-
-.buy-btn {
-  position: absolute;
-  width: 250px;
-  height: 45px;
-  right: 60px;
-  bottom: 60px;
-  text-align: center;
-  line-height: 45px;
-  border-radius: 10px;
-  background-color: #ffdfbd;
-  background-color: rgba(204, 102, 0, 0.5);
-  /* color: #ff8304; */
-}
-/* =============民主法制建设 */
-.book-des0 {
-  position: absolute;
-  width: 400px;
-  padding: 10px;
-  background-color: rgba(153, 153, 153, 0.9);
-  border-radius: 10px;
-  right: 40px;
-}
-.book-des1 {
-  top: 20px;
-}
-.book-des2 {
-  /* width: 400px; */
-  top: 150px;
-  /* left: 20px; */
-}
-.buy-btn-book {
-  position: absolute;
-  width: 250px;
-  height: 45px;
-  left: 60px;
-  bottom: 60px;
-  text-align: center;
-  line-height: 45px;
-  border-radius: 10px;
-  background-color: #ffdfbd;
-  background-color: rgba(204, 102, 0, 0.5);
-  /* color: #ff8304; */
+  height: 600px;
+  background-color: #a30202;
 }
