--- a/src/assets/css/cart.css
+++ b/src/assets/css/cart.css
@@ -15,6 +15,7 @@
   border-radius: 2px;
   margin-top: 12px;
   margin-left: 10px;
+  /* background-color: #a30202; */
   background-color: #ff8400;
 }
 .goods-list {
@@ -120,6 +121,7 @@
   width: 100px;
   height: 60px;
   background-color: #ff8400;
+  /* background-color: #a30202; */
 }
 /* ===================空页面 */
 .go-home {
