--- a/src/assets/css/details.css
+++ b/src/assets/css/details.css
@@ -56,12 +56,12 @@
   min-width: 70px;
 }
 .right-box1 {
-  color: #409eff;
+  color: #a30202;
   width: 110px;
   height: 30px;
   text-align: center;
   line-height: 30px;
-  border: 1px solid #409eff;
+  border: 1px solid #a30202;
 }
 .el-input__inner {
   height: 32px !important;
@@ -109,8 +109,8 @@
 .de-head-text {
   width: 166px;
   height: 34px;
-  color: #409eff;
-  border-bottom: 3px solid #409eff;
+  color: #a30202;
+  border-bottom: 3px solid #a30202;
 }
 .de-item-box {
   /* width: 100%; */
