--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -52,7 +52,7 @@
   z-index: 999;
 }
 .news-and-ad {
-  width: 400px;
+  width: 30%;
   height: 960px;
   padding: 20px;
   background-color: rgba(0, 0, 0, 0.28);
@@ -110,6 +110,56 @@
 }
 .home-goods-two {
   width: 100%;
-  height: 600px;
+  height: 1080px;
   background-color: #a30202;
+  background-image: url(../img/home-line.png);
+}
+.two-goods-img {
+  width: 960px;
+  height: 830px;
+  padding-top: 125px;
+  padding-left: 135px;
+  position: relative;
+}
+
+.goods-img-size {
+  width: 40%;
+  /* height: 705; */
+  position: absolute;
+  top: 240px;
+  left: 400px;
+}
+.goods-des-box {
+  width: 600px;
+  height: 600px;
+  padding-top: 300px;
+  position: relative;
+}
+.home-price-text {
+  color: #ffdeb4;
+}
+.buy-first-home {
+  width: 276px;
+  height: 57px;
+  color: #8e550d;
+  text-align: center;
+  line-height: 57px;
+  background: linear-gradient(270deg, #fee9cf 0%, #ffd7a5 100%);
+  opacity: 1;
+  border-radius: 4px;
+}
+/* =============================第二个商品 */
+.goods-des-box-second {
+  width: 600px;
+  height: 600px;
+  padding-top: 300px;
+  padding-left: 400px;
+  position: relative;
+}
+.goods-img-size-second {
+  width: 45%;
+  /* height: 705; */
+  position: absolute;
+  top: 240px;
+  left: 200px;
 }
