--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -54,7 +54,9 @@
 .news-and-ad {
   width: 30%;
   height: 960px;
+  /* height: 100%; */
   padding: 20px;
+  padding-right: 0px;
   background-color: rgba(0, 0, 0, 0.28);
 }
 
@@ -84,9 +86,10 @@
 }
 .news-ad-item {
   width: 100%;
-  height: 48%;
+  height: 100%;
   line-height: 40px;
-  overflow: hidden;
+  /* overflow: hidden; */
+  overflow-y: auto;
   /* background-color: lightcoral; */
 }
 .deliver-line {
@@ -95,7 +98,7 @@
   background-color: #fff;
 }
 .ellipsis-text {
-  width: 80%;
+  width: 70%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -163,3 +166,7 @@
   top: 240px;
   left: 200px;
 }
+
+/* ::-webkit-scrollbar {
+  display: none;
+} */
