--- a/src/assets/css/details.css
+++ b/src/assets/css/details.css
@@ -39,8 +39,8 @@
   /* background-color: darksalmon; */
   position: relative;
 }
-.price-box {
-  /* width: 100%; */
+.price-box-de {
+  width: 100%;
   /* min-height: 110px; */
   margin-top: 20px;
   padding: 20px 10px;
