--- a/src/assets/css/gloab.css
+++ b/src/assets/css/gloab.css
@@ -208,6 +208,9 @@ input {
 .text-center {
   text-align: center;
 }
+.box100 {
+  width: 100%;
+}
 /* ===================================间距 */
 .m-l-10 {
   margin-left: 10px;
