--- a/src/assets/css/cart.css
+++ b/src/assets/css/cart.css
@@ -130,11 +130,13 @@
   line-height: 40px;
   margin: 0 auto;
   border-radius: 4px;
-  background-image: linear-gradient(-194deg, #13b29a, #087b61);
+  background-image: linear-gradient(-194deg, #a30202, #750202);
   color: #fff;
 }
 .change-buy-info {
   border: 1px dashed transparent;
   border-color: #f60;
   position: relative;
+}
+.empty-cart {
 }
