--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -193,6 +193,7 @@ body{
 /* ==========================第四版首页商品样式 */
 .goods-v4{
   width: 100%;
+  /* padding-right: 20px; */
   display: flex;
   flex-wrap: wrap;
 }
@@ -210,7 +211,8 @@ body{
 
 }
 .goods-info-v4{
-  width: calc(100% - 380px);
+  width: calc(100% - 350px);
+  margin-right: 20px;
   height: 100%;
   position: relative;
 }
