意见反馈详情增加图片

--- a/src/assets/css/gloab.css
+++ b/src/assets/css/gloab.css
@@ -177,6 +177,9 @@ input {
 .bold600 {
   font-weight: 600;
 }
+.bold700 {
+  font-weight: 700;
+}
 /* ==================================布局 */
 .flex {
   display: flex;
