修改投递地址下载

--- a/src/assets/css/cart.css
+++ b/src/assets/css/cart.css
@@ -135,7 +135,7 @@
   color: #fff;
 }
 .change-buy-info {
-  border: 1px dashed transparent;
-  border-color: #f60;
+  /* border: 1px dashed transparent;
+  border-color: #f60; */
   position: relative;
 }
